Bug 1138793 - Add a sync IPC to get BrowserConfiguration - v2, r=baku